--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "homepage": "https://ionicframework.com/",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "ng serve --port=4000",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
@@ -32,7 +32,7 @@
     "ionicons": "^7.0.0",
     "ng-circle-progress": "^1.7.1",
     "rxjs": "^7.5.0",
-    "swiper": "^11.0.3",
+    "swiper": "^11.0.4",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
   },
