--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser": "^16.0.0",
     "@angular/platform-browser-dynamic": "^16.0.0",
     "@angular/router": "^16.0.0",
+    "@angular/youtube-player": "^17.0.0",
     "@capacitor/android": "^5.5.1",
     "@capacitor/app": "5.0.6",
     "@capacitor/core": "^5.5.1",
@@ -31,6 +32,7 @@
     "@ionic/angular": "^7.5.3",
     "ionicons": "^7.0.0",
     "ng-circle-progress": "^1.7.1",
+    "ngx-youtube-player": "^12.0.2",
     "rxjs": "^7.5.0",
     "swiper": "^11.0.4",
     "tslib": "^2.3.0",
