--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@capacitor/ios": "^5.5.1",
     "@capacitor/keyboard": "5.0.6",
     "@capacitor/status-bar": "5.0.6",
+    "@codetrix-studio/capacitor-google-auth": "^3.3.5",
     "@ionic/angular": "^7.5.3",
     "ionicons": "^7.0.0",
     "ng-circle-progress": "^1.7.1",
@@ -60,6 +61,8 @@
     "eslint-plugin-prefer-arrow": "1.2.2",
     "jasmine-core": "~4.6.0",
     "jasmine-spec-reporter": "~5.0.0",
+    "json-server": "^0.17.4",
+    "json-server-auth": "^2.1.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
     "karma-coverage": "~2.2.0",
